# pyclibase

./: .gitignore  PythonCLIBase.py  PythonCLIExample.py  README.md  build.sh  pyproject.toml  setup.cfg  setup.py
examples/: example.py
src/: pyclibase.py
src/pyclibase/: pyclibase.py
src/pyclibase.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
