[metadata]
name = pyclibase
version = 0.1.0
author = Sungkeun Kim
author_email = danguria@gmail.com
description = A base class of python cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksungkeun84/pyclibase
project_urls =
    Bug Tracker = https://github.com/ksungkeun84/pyclibase
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
